small content update, copy styling from the image bannger PR, fix alignment of the number pagination

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -189,6 +189,9 @@ slider-component {
   cursor: pointer;
   width: 44px;
   height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .slider-button:not([disabled]):hover {
@@ -205,19 +208,17 @@ slider-component {
 }
 
 .slider-button--next .icon {
-  margin-right: -0.2rem;
-  transform: rotate(-90deg) translateX(0.15rem);
+  transform: rotate(-90deg);
 }
 
 .slider-button--prev .icon {
-  margin-left: -0.2rem;
-  transform: rotate(90deg) translateX(-0.15rem);
+  transform: rotate(90deg);
 }
 
 .slider-button--next:not([disabled]):hover .icon {
-  transform: rotate(-90deg) translateX(0.15rem) scale(1.1);
+  transform: rotate(-90deg) scale(1.1);
 }
 
 .slider-button--prev:not([disabled]):hover .icon {
-  transform: rotate(90deg) translateX(-0.15rem) scale(1.1);
+  transform: rotate(90deg) scale(1.1);
 }
