--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -110,51 +110,6 @@ slideshow-component .slideshow.banner {
     height: 100%;
     padding: 5rem;
   }
-
-  .banner__content.slideshow__text-wrapper--top-left {
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-
-  .banner__content.slideshow__text-wrapper--top-center {
-    align-items: flex-start;
-    justify-content: center;
-  }
-
-  .banner__content.slideshow__text-wrapper--top-right {
-    align-items: flex-start;
-    justify-content: flex-end;
-  }
-
-  .banner__content.slideshow__text-wrapper--middle-left {
-    align-items: center;
-    justify-content: flex-start;
-  }
-
-  .banner__content.slideshow__text-wrapper--middle-center {
-    align-items: center;
-    justify-content: center;
-  }
-
-  .banner__content.slideshow__text-wrapper--middle-right {
-    align-items: center;
-    justify-content: flex-end;
-  }
-
-  .banner__content.slideshow__text-wrapper--bottom-left {
-    align-items: flex-end;
-    justify-content: flex-start;
-  }
-
-  .banner__content.slideshow__text-wrapper--bottom-center {
-    align-items: flex-end;
-    justify-content: center;
-  }
-
-  .banner__content.slideshow__text-wrapper--bottom-right {
-    align-items: flex-end;
-    justify-content: flex-end;
-  }
 }
 
 .slideshow__controls {
@@ -212,7 +167,7 @@ slideshow-component:not(.page-width) .slider-buttons {
   transform: scale(1);
   transition: transform 150ms ease, opacity 150ms ease;
   width: 1rem;
-  height: 1.2rem;
+  height: 1.4rem;
 }
 
 .slideshow__autoplay path {
